--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="icon" href='./img/icon/logorenda.svg'>
-        <link rel="stylesheet" href="css/responsivo600.css">
-        <link rel="stylesheet" href="css/responsivo900.css">
-        <link rel="stylesheet" href="css/default.css">
         <link rel="stylesheet" href="css/responsivo300.css">
         <link rel="stylesheet" href="css/responsivo400.css">
+        <link rel="stylesheet" href="css/responsivo600.css">
+        <link rel="stylesheet" href="./css/responsivo820.css">
+        <link rel="stylesheet" href="css/responsivo900.css">
         <link rel="stylesheet" href="css/responsivo1200.css">
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -112,16 +113,19 @@
                         <li class="li_nav"><a href="#tutoriais" class="a_nav">TUTORIAIS</a></li>
                         <li class="li_nav"><a href="#contatos" class="a_nav">CONTATOS</a></li>
                     </ul>
+                </nav>
             </div>
-            </nav>
         </div>
     </div>
     <div class="home" id="home">
         <div class="home_itens">
             <div class="home-text">
                 <div class="div-titles">
-                    <h1 id="button_title" class="gradient_font">Ganhe dinheiro</h1>
-                    <h2 id="h2-phrase">todos os dias de forma automática!</h2>
+                    <h1 id="button_title" class="gradient_font">Ganhe dinheiro <h2 id="h2-phrase">todos os dias de forma
+                            automática!
+                        </h2>
+                    </h1>
+                    <!-- <h2 id="h2-phrase">todos os dias de forma automática!</h2> -->
                 </div>
                 <div id="text">
                     <p class="text_app" id="second_title">
@@ -132,7 +136,7 @@
                     </p>
                 </div>
                 <div class="assistant_iframe">
-                    <iframe id="iframe_mobile" width="900" height="500" src="https://www.youtube.com/embed/Um63OQz3bjo"
+                    <iframe id="iframe_mobile" width="900" height="500" src="https://www.youtube.com/embed/vPqYj9PPfew"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
@@ -150,7 +154,7 @@
                 </div>
 
             </div>
-            <iframe id="iframe_desktop" width="900" height="500" src="https://www.youtube.com/embed/Um63OQz3bjo"
+            <iframe id="iframe_desktop" width="900" height="500" src="https://www.youtube.com/embed/vPqYj9PPfew"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -532,7 +536,7 @@
                 </div>
             </div>
             <div class="pergunta">
-                <img style="max-width: 38px; height:86px;" src="./img/icon/robô.svg" class="icon_pergunta">
+                <img style="max-width: 38px; height:86px;" src="./img/icon/robo.svg" class="icon_pergunta">
                 <div class="pergunta-text">
                     <h2 class="h-2_mobile" id="mobile_sub">
                         Não tenho conhecimento sobre este mercado.Funciona pra mim?
@@ -543,7 +547,7 @@
                 </div>
             </div>
             <div class="pergunta">
-                <img style="max-width: 38px; height:86px;" src="./img/icon/calendário.svg" class="icon_pergunta">
+                <img style="max-width: 38px; height:86px;" src="./img/icon/calendario.svg" class="icon_pergunta">
                 <div class="pergunta-text">
                     <h2 class="h-2_mobile">
                         Preciso pagar alguma mensalidade?
@@ -566,7 +570,7 @@
                 </div>
             </div>
             <div class="pergunta">
-                <img style="max-width: 38px; height:86px;" src="./img/icon/dólar.svg" class="icon_pergunta">
+                <img style="max-width: 38px; height:86px;" src="./img/icon/dolar.svg" class="icon_pergunta">
                 <div class="pergunta-text">
                     <h2 class="h-2_mobile">
                         Com quanto posso começar ?
@@ -593,13 +597,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <iframe width="900" height="500" src="https://www.youtube.com/embed/Um63OQz3bjo"
+                    <iframe width="900" height="500" src="https://www.youtube.com/embed/yA1QFHpZKzs"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div class="carousel-item">
-                    <iframe width="900" height="500" src="https://www.youtube.com/embed/Um63OQz3bjo"
+                    <iframe width="900" height="500" src="https://www.youtube.com/embed/gLwtXtvHB84"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
@@ -619,7 +623,7 @@
 
         <div class="div_btn_binance">
             <button class="button-gradient"><a href="https://www.binance.com/pt-BR">CADASTRAR NA BINANCE</a></button>
-            <button class="button-transparent"><a href="https://www.binance.com/pt-BR">DOWNLOAD DO ROBÔ</a></button>
+            <button class="button-transparent"><a href="https://raqsy.com/s/QSK59">DOWNLOAD DO ROBÔ</a></button>
         </div>
 
 
@@ -633,13 +637,17 @@
             <h2>Ronald <b>Christopher</b></h2>
         </div>
         <div class="button_mentor">
-            <button class="button-gradient button_telegram"><img
-                    src="https://cdn.worldvectorlogo.com/logos/telegram-1.svg" alt="" style="max-width: 50px;">ENTRE
-                PARA O GRUPO DO TELEGRAM E CONHEÇA A MINHA ESTRATÉGIA!</button>
+            <button class="button-gradient button_telegram">
+                <img src="https://cdn.worldvectorlogo.com/logos/telegram-1.svg" alt="" style="max-width: 50px;"> <a
+                    href="https://t.me/+4TlmMZOVU-RhMTEx" target="_blank">ENTRE PARA O GRUPO DO TELEGRAM E CONHEÇA A
+                    MINHA ESTRATÉGIA!</a>
+            </button>
             <button class="button-gradient button_telegram button_wpp"><img
                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/2044px-WhatsApp.svg.png"
                     alt="" style="max-width: 50px;">
-                <div class="mentor_mobile" style="width: 100%">CONHEÇA SEU MENTOR</div>
+                <div class="mentor_mobile" style="width: 100%"><a
+                        href="https://wa.me/5541998471342?text=Olá%20Ronald%20quero%20mais%20informações%20sobre%20o%20robo%20RoyalQ"
+                        target="_blank"> CONHEÇA SEU MENTOR</a></div>
             </button>
         </div>
     </div>
